[tool.poetry]
name = "dmail"
version = "0.1.0"
description = "Disposable Mail Server"
authors = ["pajecawav <pajecawav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
SQLAlchemy = "^1.3.22"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
pyTelegramBotAPI = "^3.7.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
sqlalchemy-stubs = "^0.3"

[too.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
